@@ -1,5 +1,6 @@
 #This file is part of Tryton.  The COPYRIGHT file at the top level of
 #this repository contains the full copyright notices and license terms.
+from .config import config
 
 OPERATORS = (
     'child_of',
@@ -17,7 +18,3 @@ OPERATORS = (
     '<',
     '>',
 )
-
-MODEL_CACHE_SIZE = 200
-RECORD_CACHE_SIZE = 2000
-BROWSE_FIELD_TRESHOLD = 100
